<resources>
    <string name="app_name">Charnock</string>
    <string name="app_name_home">Charnock Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="by_purplefront">by PurpleFront</string>
    <string name="customer_feedback_app">Charnock App</string>
    <string name="nointernetaccess">No Internet Access</string>
    <string name="nointernetaccess_messgae">No Internet Access try again</string>
    <string name="password_online_local_different">Old password does not match</string>
    <string name="nointernetconnection">No Internet Connection</string>
    <string name="unknownerror">Some thing went wrong contact PurpleFront for the issue.</string>
    <string name="unknownerror2">Some error occurred try again</string>
    <string name="unknownerror4">An error occurred while accessing Database try clearing Database and use email you are already registered with</string>
    <string name="unknownerror3">An Unknown error occurred try again restarting the app</string>
    <string name="unknownerror5">Some error occurred please try again after some time</string>
    <string name="unknownerror6">Error contacting server try again after some time</string>
    <string name="unknownerror7">No response from server</string>
    <string name="unknownerror8">Error contacting server</string>
    <string name="unknownerror9">Error accessing server try reloading the page</string>
    <string name="unknownerror10">An error occurred while accessing server try again. If problem persists contact administrator for the issue</string>
    <string name="error_occured">No Internet Access an error has occurred try again</string>
    <string name="permission_error">You do not have enough permission to send message</string>
    <string name="permission_error_calender">You do not have enough permission to create event</string>
    <string name="powered_by_purplefront">Powered by PurpleFront</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait</string>
    <string name="message">New Message:</string>
    <string name="sender_id">356644191298</string>
    <string name="url_reference">http://purplefront.net/charnock_dev/</string>
    <string name="YoutubeDeveloperKey">AIzaSyA0XSrhhUbnJrecvoWyDj2dButtR6Y06A0</string>
    <string name="actionbar_text_color">#ffffff</string>
    <string name="divider_color">#ebebeb</string>
    <string-array name="planets_array">
        <item>Home</item>
        <item>View/Edit Profile</item>
        <item>Change Password</item>
        <item>LogOut</item>
        <item>Exit</item>
    </string-array>
    <string-array name="number_of_products">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="planets_array_logged_in">
        <item>Home</item>
        <item>Login</item>
        <item>Exit</item>
    </string-array>
    <string name="view_profile">View Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="notallowed">You did not have enough authorization</string>
    <string name="roleerror">You do not have any role defined</string>
    <string name="website2" translatable="false">www.charnock.biz</string>
    <string name="thank_you_message">Thank you for contacting us we will get back to you shortly.</string>
    <string name="changepassword_heading">Change Password</string>
    <string name="changepassword_email">Username</string>
    <string name="changepassword_oldpassword">Current Password</string>
    <string name="changepassword_oldpassword_hint">Enter current password</string>
    <string name="changepassword_newpassword">New password</string>
    <string name="changepassword_newpassword_hint">Enter new password</string>
    <string name="changepassword_confirmnewpassword">Confirm new Password</string>
    <string name="changepassword_confirmnewpassword_hint">Enter confirm password</string>
    <string name="changepassword_showpassword">Show Password</string>
    <string name="Changepassword_submit">Submit</string>
    <string name="changepassword_success">Your password has been changed successfully</string>
    <string name="change_password_correct">Try again with the correct password</string>
    <string name="password_online_local_different1">Local and online profile password differs</string>
    <string name="vieweditprofile_heading">View/Edit Profile</string>
    <string name="vieweditprofile_name">Name*</string>
    <string name="vieweditprofile_name_hint">Enter your name</string>
    <string name="vieweditprofile_email">Email</string>
    <string name="vieweditprofile_email_hint">Enter your email address</string>
    <string name="vieweditprofile_email_hint1">Enter your email</string>
    <string name="vieweditprofile_setpassword">Set Password</string>
    <string name="vieweditprofile_bsname">Business name</string>
    <string name="vieweditprofile_bsname_hint">Enter your business name</string>
    <string name="vieweditprofile_sitename_hint">Enter your business name</string>
    <string name="vieweditprofile_category">Business category</string>
    <string name="vieweditprofile_phone">Phone</string>
    <string name="vieweditprofile_phone_hint">Enter your 10 digit mobile number</string>
    <string name="vieweditprofile_fbpage">FB page</string>
    <string name="vieweditprofile_fbpage_hint">Enter your Facebook page name</string>
    <string name="vieweditprofile_address">Address Line 1</string>
    <string name="vieweditprofile_address2">Address Line 2</string>
    <string name="vieweditprofile_address3">Address Line 3</string>
    <string name="vieweditprofile_address_hint">Enter your address</string>
    <string name="vieweditprofile_address_hint1">Enter your address line 1</string>
    <string name="vieweditprofile_address_hint2">Enter your address line 2</string>
    <string name="vieweditprofile_address_hint3">Enter your address line 3</string>
    <string name="vieweditprofile_city">City</string>
    <string name="vieweditprofile_state">State</string>
    <string name="vieweditprofile_city_hint">Enter your city</string>
    <string name="vieweditprofile_pincode">Pincode</string>
    <string name="vieweditprofile_pincode_hint">Enter your pincode</string>
    <string name="vieweditprofile_state_hint">Select your State</string>
    <string name="vieweditprofile_logo_discription">Select your official logo</string>
    <string name="vieweditprofile_submit">Save</string>
    <string name="service_create">Create Service</string>
    <string name="service_create_success">Service created successfully</string>
    <string name="service_category_name">Product Category</string>
    <string name="service_subcategory_name">Product Sub-category</string>
    <string name="service_product_name">Product Name</string>
    <string name="service_warranty">Warranty Status</string>
    <string name="problem_desc">Enter description of the problem</string>
    <string name="service_branch">Service Location</string>
    <string name="service_desc">Problem Description</string>
    <string name="category_required">Select category</string>
    <string name="subcategory_required">Select subcategory</string>
    <string name="product_required">Select product</string>
    <string name="warrenty_required">Select warrenty</string>
    <string name="service_location_required">Select service location</string>
    <string name="problem_details_required">Enter problem details</string>
    <string name="service_create_submit">Submit Request</string>
    <string name="service_no_address">No Address found for the customer</string>
    <string name="select_address">Select Address</string>
    <string name="update_status">Update Status</string>
    <string name="job_sheet">Job Sheet</string>
    <string name="update_visit_type">Update Visit Type</string>
    <string name="product_description_warrenty">Edit Product Description/Warranty</string>
    <string name="customer_approval">Send for Customer Approval</string>
    <string name="preregistration_heading">If you are an existing user please select existing account otherwise select new account</string>
    <string name="preregistration_existinguser">Log In</string>
    <string name="preregistration_newuser">Sign Up</string>
    <string name="preregistration_submit">Submit</string>
    <string name="update_saved">Changes has saved sucessfully</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Description</string>
    <string name="product_specification">Specification</string>
    <string name="product_category">Category</string>
    <string name="product_id">Id</string>
    <string name="product_code">Product code</string>
    <string name="product_images">Images</string>
    <string name="name_2">Name</string>
    <string name="email_2">Email</string>
    <string name="contact_2">Contact</string>
    <string name="demo_video">Demo video</string>
    <string name="request_information">Request Information</string>
    <string name="requestingInformation">Request Information</string>
    <string name="video_player">Video Player</string>
    <string name="video_player_title">Video Player</string>
    <string name="no_internet_access">Please check your network connection</string>
    <string name="no_internet">Can not Connect</string>
    <string name="logout_warning">Are you sure you want to logout</string>
    <string name="request_heading">Create Account</string>
    <string name="request_firsttime">For enquiries, please give details below</string>
    <string name="request_name">Name</string>
    <string name="request_position">Position</string>
    <string name="request_company">Company</string>
    <string name="request_website">Website</string>
    <string name="request_email">Email</string>
    <string name="request_phone">Phone number</string>
    <string name="request_location">Location</string>
    <string name="request_Preferences">Preferences:</string>
    <string name="request_Level_of_interests">Level of interests:</string>
    <string name="resetpassword_textemail">Enter your username</string>
    <string name="resetpassword_submit">Reset Password</string>
    <string name="resetpassword_note">Your username must match with our records. You will get an email with the password information.</string>
    <string name="resetpassword_success">Success</string>
    <string name="resetpassword_success_message">Your password has been reset. Check your email for instructions.</string>
    <string name="existinguser_note">If you are existing user enter your email id and password otherwise go back and click new user</string>
    <string name="existinguser_username">Username</string>
    <string name="existinguser_username_hint">Email</string>
    <string name="existinguser_password_hint">Password</string>
    <string name="existinguser_login">Login</string>
    <string name="existinguser_forgetpassword">Forgot password</string>
    <string name="signup_hint">New user sign up here!</string>
    <string name="request_account">Request Account</string>
    <string name="registration_Address_line1_hint">Address Line1*</string>
    <string name="registration_Address_line2_hint">Address Line2</string>
    <string name="registration_Address_line3_hint">Address Line3</string>
    <string name="registration_city_hint">City</string>
    <string name="registration_pin_code_hint">Pin code*</string>
    <string name="registration_state_hint">state*</string>
    <string name="registration_phone_hint">Phone*</string>
</resources>