<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            style="@style/TextviewStyle_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepassword_email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/changepassword_username"
            style="@style/TextviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView13"
            style="@style/TextviewStyle_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepassword_oldpassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <EditText
            android:id="@+id/changepassword_password"
            style="@style/EditTextviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:ems="10"
            android:hint="@string/changepassword_oldpassword_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView15"
            style="@style/TextviewStyle_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepassword_newpassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <EditText
            android:id="@+id/changepassword_newpassword"
            style="@style/EditTextviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:ems="10"
            android:hint="@string/changepassword_newpassword_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView17"
            style="@style/TextviewStyle_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepassword_confirmnewpassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <EditText
            android:id="@+id/changepassword_confirmpassword"
            style="@style/EditTextviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:ems="10"
            android:hint="@string/changepassword_confirmnewpassword_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/changepassword_showpassword"
            style="@style/TextviewStyle_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changepassword_showpassword" />

        <Button
            android:id="@+id/changepassword_submit"
            style="@style/Button_style"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Changepassword_submit" />

    </LinearLayout>
</ScrollView>