<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <LinearLayout
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextviewStyle_space_MediumBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/existinguser_note"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextviewStyle_space_MediumBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existinguser_username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />


        <EditText
            android:id="@+id/existinguser_username"
            style="@style/EditTextviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:ems="10"
            android:hint="@string/existinguser_username_hint"
            android:inputType="text|textNoSuggestions"></EditText>


        <EditText
            android:id="@+id/existinguser_password"
            style="@style/EditTextviewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:ems="10"
            android:hint="@string/existinguser_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/existinguser_login"
            style="@style/Button_style"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/existinguser_login"
            android:textColor="#ffffff" />

        <!--<Button-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/existinguser_forgetpassword"-->
        <!--style="@style/Button_style_tab"-->
        <!--android:id="@+id/existinguser_forgetpassword"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_gravity="center" />-->

        <TextView
            android:id="@+id/existinguser_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/existinguser_forgetpassword"
            android:textSize="16dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/signup_hint"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:drawableRight="@drawable/arrow"
            android:gravity="center"
            android:text="@string/request_account"
            android:textColor="#ab3b3b"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ly_req_accnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>
</ScrollView>